better calnedar range

--- a/src/app/overrides.css
+++ b/src/app/overrides.css
@@ -1,3 +1,7 @@
 .react-daterange-picker__inputGroup__input {
   height: auto !important;
 }
+
+[type="number"] {
+  background-color: transparent;
+}
